Refactor post apis to return created entity instead of just created message
